aws/eks-cluster/environment/prod/yaml/nlb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlb-ingress
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - nlb.lucky-gun.com
      secretName: wildcard-tls
  rules:
    - host: nlb.lucky-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
